# essential-integration

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell-basic.nix  shell.nix
.github/workflows/: ci.yml  mdbook.yml  release.yml
apps/counter/: README.md  build-sign-deploy-solve.sh  counter.pnt  test.sh
apps/counter/app/: Cargo.toml
apps/counter/app/src/: lib.rs  main.rs
apps/counter/app/tests/: builder_tests.rs  tests.rs
apps/counter/pint/: pint.toml
apps/defi/app/: Cargo.toml
apps/defi/app/src/: inputs.rs  lib.rs
apps/defi/app/tests/: tests.rs
apps/defi/pint/: amm.pnt  swap.pnt
apps/defi/pint/std/: auth.pnt  lib.pnt
apps/forty-two/: README.md  build-and-deploy.sh  forty-two.pnt
apps/fungible-token/: fungible-token.pnt  test.sh
apps/nft/: README.md
apps/nft/front_end/: Cargo.toml
apps/nft/front_end/src/: inputs.rs  lib.rs  main.rs
apps/nft/front_end/src/inputs/: auth.rs  key.rs  nft.rs  signed.rs  swap_any.rs
apps/nft/front_end/src/inputs/key/: init.rs  key.rs
apps/nft/front_end/src/inputs/nft/: mint.rs  transfer.rs
apps/nft/front_end/src/inputs/signed/: cancel.rs  transfer.rs  transfer_from.rs
apps/nft/front_end/src/inputs/swap_any/: init.rs  swap.rs
apps/nft/front_end/tests/: tests.rs
apps/nft/pint/: auth.pnt  key.pnt  lib.pnt  nft.pnt  signed.pnt  swap_any.pnt
apps/nft/pint/allowed/: signed.pnt
apps/nft/pint/nft/: pint.toml
apps/nft/pint/nft/src/: contract.pnt  signed.pnt
apps/nft/pint/signed/: pint.toml
apps/nft/pint/signed/src/: contract.pnt
apps/nft/pint/std/: auth.pnt  lib.pnt
apps/nft/pint/swap_any/: pint.toml
apps/nft/pint/swap_any/src/: contract.pnt
apps/std/: pint.toml
apps/std/src/: auth.pnt  lib.pnt
apps/token/: README.md
apps/token/app/: Cargo.toml
apps/token/app/src/: actions.rs  burn.rs  inputs.rs  lib.rs  main.rs  mint.rs  token.rs  transfer.rs
apps/token/app/src/inputs/: signed.rs  token.rs
apps/token/app/src/inputs/signed/: cancel.rs  mint.rs  transfer.rs  transfer_from.rs
apps/token/app/src/inputs/token/: burn.rs  cancel.rs  init.rs  mint.rs  transfer.rs
apps/token/app/src/token/: signed.rs  token.rs
apps/token/app/tests/: tests.rs  token_integration_tests.rs
apps/token/app2/: Cargo.toml
apps/token/app2/src/: burn.rs  lib.rs  main.rs  mint.rs  transfer.rs
apps/token/app2/tests/: tests.rs
apps/token/pint/: signed.pnt  token.pnt  token_2.pnt
apps/token/pint/allowed/: burn.pnt  cancel.pnt  mint.pnt  signed.pnt  transfer.pnt
apps/token/pint/signed/: pint.toml
apps/token/pint/signed/src/: contract.pnt
apps/token/pint/std/: auth.pnt  lib.pnt
apps/token/pint/token/: pint.toml
apps/token/pint/token/src/: auth.pnt  config.pnt  contract.pnt
apps/unions/app/: Cargo.toml
apps/unions/app/src/: lib.rs
apps/unions/app/tests/: tests.rs
apps/unions/src/: contract.pnt
apps/utils/: Cargo.toml  README.md
apps/utils/src/: addresses.rs  builder.rs  cli.rs  compile.rs  db.rs  debug.rs  deploy.rs  inputs.rs  lib.rs  local_server.rs  node.rs  print.rs  read.rs
apps/utils/src/debug/: tests.rs
crates/essential-cli/: Cargo.toml  README.md
crates/essential-cli/src/: main.rs
crates/essential-deploy/: Cargo.toml
crates/essential-deploy-contract/: Cargo.toml  README.md
crates/essential-deploy-contract/src/: lib.rs  main.rs
crates/essential-deploy-intent/: Cargo.toml
crates/essential-deploy-intent/src/: main.rs
crates/essential-deploy/src/: lib.rs  main.rs
crates/essential-dry-run/: Cargo.toml  README.md
crates/essential-dry-run/src/: lib.rs  main.rs
crates/essential-read/: Cargo.toml  README.md
crates/essential-read/src/: lib.rs
crates/essential-rest-client/: Cargo.toml  README.md  README.tpl
crates/essential-rest-client/src/: builder_client.rs  lib.rs  main.rs  node_client.rs
crates/essential-rest-client/tests/: tests.rs  utils.rs
crates/pint-deploy/: Cargo.toml
crates/pint-deploy/src/: main.rs
crates/pint-query/: Cargo.toml
crates/pint-query/src/: main.rs
crates/pint-submit/: Cargo.toml
crates/pint-submit/src/: lib.rs  main.rs
docs/code/: counter-abi.json  counter-cargo.toml  counter-cli.sh  counter-main.rs  counter-test.rs  counter.pnt  counter.rs  counter_examples.pnt  deploy.sh  front-end.sh  pint.sh
docs/code/counter/: counter-abi.json  counter-cargo.toml  counter-cli.sh  counter-main.rs  counter-test.rs  counter.pnt  counter.rs  counter_examples.pnt  deploy.sh  front-end.sh
docs/code/token/: out1.txt  pint.sh  token-abi.json  token.pnt
docs/getting-started/: book.toml
docs/getting-started/src/: SUMMARY.md  index.md
docs/getting-started/src/getting-started/: applications_101.md  architecture.md  index.md  server.md
docs/getting-started/src/getting-started/applications/: index.md  predicates_constraints.md  state_mutations.md  storage_contracts.md
docs/getting-started/src/getting-started/counter/: compile.md  deploy-and-solve.md  deploy-to-server.md  index.md  new.md  predicates.md  storage.md
docs/getting-started/src/getting-started/counter/app/: app.md  deploy.md  index.md  new.md  test.md
docs/getting-started/src/getting-started/counter/cli/: commands.md  deploy-to-testnet.md  index.md  interact.md
docs/getting-started/src/getting-started/installation/: binaries.md  index.md  nix.md  source.md  syntax.md
docs/getting-started/src/getting-started/token/: compile.md  deploy-and-solve.md  imports.md  index.md  interfaces.md  new.md  predicates.md  storage.md  types.md
docs/getting-started/src/token/: index.md  mint.md  new.md  storage.md
docs/getting-started/theme/: pint.js
pkgs/: book.nix  cargo-readme.nix  compile-pint-project.nix  essential-all.nix  essential-cli.nix  essential-deploy-contract.nix  essential-dry-run.nix  essential-minimal.nix  essential-read.nix  essential-rest-client.nix  essential.nix  pint-deploy.nix  pint-query.nix  pint-submit.nix  test-app-counter.nix  test-app-fungible-token.nix  test-app-nft.nix  test-app-token.nix
pkgs/pint-proj/: build.sh  compile-all-apps.nix  compile-pint-project.nix
shells/: dev.nix  essential-rust-app-dev.nix  shell.nix
templates/: flake.nix
(+26 files in other folders)
