[workspace]
members = [
    "apps/counter/app",
    "apps/nft/front_end",
    "apps/token/app",
    "apps/utils",
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-integration"


[workspace.dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
essential-debugger = "0.1.0"
essential-hash = "0.1.0"
essential-server-types = "0.1.0"
essential-sign = "0.1.0"
essential-signer = "0.1.0"
essential-types = "0.1.0"
essential-wallet = "0.1.0"
hex = "0.4.3"
reqwest = "0.12.4"
rpassword = "7.3.1"
secp256k1 = { version = "0.29" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"

essential-app-utils = { path = "apps/utils", version = "0.1.0" }
essential-deploy-contract = { path = "crates/essential-deploy-contract", version = "0.1.0" }
essential-read = { path = "crates/essential-read" }
essential-rest-client = { path = "crates/essential-rest-client", version = "0.1.0" }
