[workspace]
members = [
    "crates/*",
    "apps/utils",
    "apps/token/app",
    "apps/counter/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-integration"

[workspace.dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
clap = { version = "4.5.16", features = ["derive"] }
essential-builder-types = "0.2.0"
essential-builder = "0.10.0"
essential-builder-db = "0.5.0"
essential-debugger = "0.2.0"
essential-hash = "0.7.0"
essential-node-api = "0.8.0"
essential-node-db = "0.4.0"
essential-node = "0.8.0"
essential-node-types = "0.2.0"
essential-sign = "0.7.0"
essential-signer = "0.4.0"
essential-types = "0.5.0"
essential-wallet = "0.5.0"
pint-abi = "0.6.0"
hex = "0.4.3"
reqwest = "0.12.8"
rpassword = "7.3.1"
secp256k1 = { version = "0.29" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }

essential-rest-client = { path = "crates/essential-rest-client", version = "0.6.0" }
essential-app-utils = { path = "apps/utils", version = "0.6.0" }
