[package]
name = "essential-app-utils"
description = "Utilities for building Essential applications"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-debugger = { workspace = true, optional = true }
essential-hash = { workspace = true }
essential-rest-client = { workspace = true, optional = true }
essential-server-types = { workspace = true }
essential-sign = { workspace = true }
essential-signer = { workspace = true }
essential-types = "0.3.0"
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml.workspace = true

[features]
test-utils = ["dep:essential-debugger", "dep:essential-rest-client"]
