[package]
name = "essential-app-utils"
description = "Utilities for building Essential applications"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-builder-db = { workspace = true }
essential-builder = { workspace = true }
essential-debugger = { workspace = true, optional = true }
essential-hash = { workspace = true }
essential-rest-client = { workspace = true, optional = true }
essential-sign = { workspace = true }
essential-node = { workspace = true, features = ["tracing"] }
essential-node-db = { workspace = true }
essential-node-types = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml.workspace = true
uuid.workspace = true

[features]
test-utils = ["dep:essential-rest-client"]
