[package]
name = "essential-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "essential"
path = "src/main.rs"

[dependencies]
clap = { versio = "4", features = ["derive"] }
essential-hash = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
essential-sign = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
serde_json = "1"
