[package]
name = "essential-cli"
description = "Command line tool for interacting with the Essential protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "essential"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
serde_json = { workspace = true }
