[package]
name = "essential-deploy-contract"
version = "0.2.0"
description = "Cli and library for deploying contracts to the Essential protocol"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
essential-read.workspace = true
essential-rest-client.workspace = true
essential-types = "0.3.0"
essential-wallet.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
