[package]
name = "essential-deploy-intent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
essential-read.workspace = true
essential-rest-client.workspace = true
essential-types.workspace = true
essential-wallet.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
essential-wallet = { workspace = true, features = ["test-utils"]}
