[package]
name = "essential-dry-run"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-rest-client = { workspace = true }
essential-types = { workspace = true }
essential-wallet = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rpassword = { workspace = true }
tokio = { workspace = true }
