[package]
name = "essential-dry-run"
version = "0.1.0"
description = "Cli and library for dry running solutions against a running essential-server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-read = { workspace = true }
essential-rest-client = { workspace = true }
essential-server-types = { workspace = true }
essential-types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tokio = { workspace = true }
