[package]
name = "essential-read"
version = "0.2.0"
description = "Utility crate for reading contracts and solutions from disk"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing"]
