[package]
name = "essential-rest-client"
description = "Client for interacting with the Essential Server"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
essential-builder-types = { workspace = true }
essential-node-types = { workspace = true }
essential-types = { workspace = true }
hex.workspace = true
reqwest = { workspace = true, features = ["json", "native-tls-alpn"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
essential-node = { workspace = true }
essential-node-api = { workspace = true }
uuid = { workspace = true }
