[package]
name = "pint-deploy"
description = "Pint package for deploying contracts to a node"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-hash = { workspace = true }
essential-node-types = { workspace = true }
essential-rest-client = { workspace = true }
essential-types = { workspace = true }
futures = "0.3.31"
pint-cli = { workspace = true }
pint-pkg = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
