[package]
name = "pint-query"
description = "Pint package for querying state from a node"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-rest-client = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
pint-abi = { workspace = true }
pint-manifest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
