[package]
name = "pint-submit"
description = "Pint package for submitting solutions to a node"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-rest-client = { workspace = true }
essential-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
