[package]
name = "pint-submit"
description = "Pint package for submitting solutions to a node"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "submit"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-hash = { workspace = true }
essential-node-types = { workspace = true }
essential-rest-client = { workspace = true }
essential-types = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
