[package]
name = "counter-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
essential-deploy-contract.workspace = true
essential-hash.workspace = true
essential-rest-client.workspace = true
essential-types.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
essential-wallet = { workspace = true, features = ["test-utils"] }