[package]
name = "counter-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
essential-app-utils.workspace = true
essential-deploy-contract.workspace = true
essential-hash.workspace = true
essential-rest-client.workspace = true
essential-types.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
essential-app-utils = { workspace = true, features = ["test-utils"] }
essential-wallet = { workspace = true, features = ["test-utils"] }