[package]
name = "counter-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
essential-app-utils.workspace = true
essential-hash.workspace = true
essential-rest-client.workspace = true
essential-types.workspace = true
regex = "1.11.1"
tokio.workspace = true

[dev-dependencies]
essential-app-utils = { workspace = true, features = ["test-utils"] }
essential-builder.workspace = true
essential-builder-db.workspace = true
essential-node.workspace = true
